--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,26 @@
 [package]
 name = "urio"
 version = "0.1.0"
+authors = ["신승훈 <seunghunee@gmail.com>"]
 edition = "2018"
+description = "A io_uring library in Rust"
+documentation = "https://docs.rs/urio"
+readme = "README.md"
+homepage = "https://github.com/seunghunee/urio"
+repository = "https://github.com/seunghunee/urio"
 license = "MIT"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+keywords = ["io_uring", "io", "async", "network", "filesystem"]
+categories = [
+    "asynchronous",
+    "concurrency",
+    "filesystem",
+    "network-programming",
+    "os::linux-apis",
+]
 
 [dependencies]
-libc = "0.2.98"
-bitflags = "1.2.1"
+libc = "0.2"
+bitflags = "1.3"
 
 [dev-dependencies]
 tempfile = "3"
